<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main_layout"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
...
            app:fabAlignmentMode="end"
            app:hideOnScroll="true"
            android:backgroundTint="@color/bottomAppBarColor"
            app:navigationIcon="@drawable/ic_back" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_movie_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_heart_outline_favorite"
            app:tint="@color/md_white"
            app:backgroundTint="@color/md_red_500"
            app:layout_anchor="@id/bottomAppBar" />
...
